--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -58,7 +58,7 @@ jobs:
 
     # Build the engine
     - name: Build Nazara
-      run: xmake.exe
+      run: xmake.exe -v
 
     # Install the result files
     - name: Install Nazara
